--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,24 @@
  *= require_tree .
  *= require_self
  */
+@import "bulma";
+.notification:not(:last-child){
+  margin-bottom: 0;
+}
+.navbar-item{
+  background-color: skyblue;
+}
+.navbar-item img{
+  max-height: none;
+}
+.is-4{
+  display: flex;
+  background-color: skyblue;
+  justify-content: left;
+  font-size: 100%;
+}
+.head_title{
+  width: 100%;
+  height: 100%;
+  font-size: 50px;
+}
